put back files to previous path, add checks in test